[workspace]
resolver = "2"
members = [
    "elfo",
    "elfo-core",
    "elfo-utils",
    "elfo-macros",
    "elfo-macros-impl",
    "elfo-test",
    "elfo-configurer",
    "elfo-logger",
    "elfo-dumper",
    "elfo-telemeter",
    "elfo-pinger",
    "elfo-network",

    "examples",
    "benches",
]

[workspace.package]
repository = "https://github.com/elfo-rs/elfo"
authors = ["Paul Loyd <pavelko95@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
stability = "0.2.0"
metrics = "0.17.1"
toml = "0.8.14"
bytesize = { version = "1.2.0", features = ["serde"] }

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
missing_docs = "warn"
unexpected_cfgs = "allow" # for `docsrs`

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

[profile.release]
debug = 1
