[workspace]
resolver = "2"
members = [
    "elfo",
    "elfo-core",
    "elfo-utils",
    "elfo-macros",
    "elfo-macros-impl",
    "elfo-test",
    "elfo-configurer",
    "elfo-logger",
    "elfo-dumper",
    "elfo-telemeter",
    "elfo-pinger",
    "elfo-network",

    "examples",
    "benches",
]

[workspace.package]
repository = "https://github.com/elfo-rs/elfo"
authors = ["Paul Loyd <pavelko95@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
rust-version = "1.81.0" # update CI if changed

[workspace.dependencies]
tokio = "1.37"
stability = "0.2.0"
metrics = "0.17.1"
dashmap = "6.0.1"
toml = "0.8.14"
bytesize = { version = "2", features = ["serde"] }
proptest = "1.6"
criterion = "0.5.1"
eyre = "0.6.8"

[workspace.dependencies.derive_more]
version = "2"
features = ["constructor", "deref", "display", "error", "from", "into", "is_variant"]

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
missing_docs = "warn"
unexpected_cfgs = "allow" # for `docsrs`

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

[profile.release]
debug = 1
