[package]
name = "elfo-benches"
version = "0.0.0"
publish = false

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[dev-dependencies]
elfo = { path = "../elfo" }
elfo-utils = { version = "0.2.6", path = "../elfo-utils" }

metrics.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
criterion = "0.5.1"
futures = "0.3"
derive_more = "0.99.17"
mimalloc = { version = "0.1.39", default-features = false }
jemallocator = "0.5.4"
tcmalloc = { version = "0.3.0", features = ["bundled"] }

[[bench]]
name = "messaging_sys"
path = "messaging_sys.rs"
harness = false

[[bench]]
name = "messaging_mi"
path = "messaging_mi.rs"
harness = false

[[bench]]
name = "messaging_je"
path = "messaging_je.rs"
harness = false

[[bench]]
name = "messaging_tc"
path = "messaging_tc.rs"
harness = false

[[bench]]
name = "coop"
path = "coop.rs"
harness = false

[[bench]]
name = "stream"
path = "stream.rs"
harness = false

[[bench]]
name = "trace_id"
path = "trace_id.rs"
harness = false

[[bench]]
name = "yield"
path = "yield.rs"
harness = false
