[package]
name = "elfo-configurer"
version = "0.2.0-alpha.15"
description = "Loads and distributes configs across the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio", "configuration"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
elfo-core = { version = "0.2.0-alpha.15", path = "../elfo-core", features = ["unstable"] }

toml = "0.7"
tokio = { version = "1", features = ["fs"] }
serde = { version = "1.0.120", features = ["derive", "rc"] }
serde-value = "0.7.0"
futures = "0.3.12"
tracing = "0.1.25"
fxhash = "0.2.1"

[dev-dependencies]
serde_json = "1.0.94"
