[package]
name = "elfo-configurer"
version = "0.2.0-alpha.20"
description = "Loads and distributes configs across the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio", "configuration"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core", features = ["unstable"] }

toml.workspace = true
tokio = { workspace = true, features = ["fs"] }
futures.workspace = true
serde = { workspace = true, features = ["rc"] }
tracing.workspace = true
serde-value = "0.7.0"
fxhash = "0.2.1"

[dev-dependencies]
serde_json = "1.0.94"

[features]
test-util = []
