[package]
name = "elfo-core"
version = "0.2.0-alpha.20"
description = "The core of the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-util = ["tokio/test-util"]
network = ["rmp-serde"]
unstable = []
unstable-stuck-detection = ["dep:thread_local"]

[dependencies]
elfo-macros = { version = "0.2.0-alpha.20", path = "../elfo-macros" }
elfo-utils = { version = "0.2.7", path = "../elfo-utils" }

instability.workspace = true
metrics.workspace = true
dashmap.workspace = true
derive_more.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "signal", "macros"] }
futures.workspace = true
thread_local = { workspace = true, optional = true }
parking_lot.workspace = true
# TODO: avoid the `rc` feature here?
serde = { workspace = true, features = ["rc"] }
tracing.workspace = true
idr-ebr = "0.3.2"
futures-intrusive = "0.5"
cordyceps = "0.3.2"
smallbox = "0.8.0"
static_assertions = "1.1.0"
fxhash = "0.2.1"
linkme = "0.3"
smallvec = { version = "1.6.1", features = ["union"] }
slotmap.workspace = true
serde-value = "0.7.0"
arc-swap = "1.2.0"
erased-serde = "0.4.0"
pin-project.workspace = true
sealed = "0.6"
# TODO: must be optional
serde_json = { version = "1.0.64", features = ["raw_value"] }
regex = "1.6.0"
unicycle = "0.10.2"
rmp-serde = { version = "1.1.0", optional = true }
humantime-serde = "1"

[dev-dependencies]
elfo-utils = { version = "0.2.7", path = "../elfo-utils", features = ["test-util"] }

tokio = { workspace = true, features = ["full"] }
toml.workspace = true
proptest.workspace = true
anyhow = "1.0.40"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
