[package]
name = "elfo-dumper"
version = "0.2.0-alpha.11"
description = "Dumps messages of the elfo system on disk"
keywords = ["elfo", "actor", "distributed", "tokio", "dumping"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
elfo-core = { version = "0.2.0-alpha.11", path = "../elfo-core", features = ["unstable"] }
elfo-utils = { version = "0.2.3", path = "../elfo-utils" }

tokio = { version = "1", features = ["fs", "io-util", "sync"] }
serde = { version = "1.0.120", features = ["derive"] }
derive_more = "0.99.11"
serde-value = "0.7.0"
futures = "0.3.12"
tracing = "0.1.25"
metrics = "0.17"
fxhash = "0.2.1"
humantime-serde = "1"
serde_json = "1.0.64"
eyre = "0.6.5"
parking_lot = "0.12"
thread_local = "1.1.3"
bytesize = { version = "1.2.0", features = ["serde"] }
