[package]
name = "elfo-dumper"
version = "0.2.0-alpha.19"
description = "Dumps messages of the elfo system on disk"
keywords = ["elfo", "actor", "distributed", "tokio", "dumping"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
elfo-core = { version = "0.2.0-alpha.19", path = "../elfo-core", features = ["unstable"] }
elfo-utils = { version = "0.2.6", path = "../elfo-utils" }

metrics.workspace = true
bytesize.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
serde = { version = "1.0.120", features = ["derive"] }
tracing = "0.1.25"
fxhash = "0.2.1"
humantime-serde = "1"
serde_json = "1.0.64"
parking_lot = "0.12"
thread_local = "1.1.3"
libc = "0.2.169"

[dev-dependencies]
elfo-core = { version = "0.2.0-alpha.19", path = "../elfo-core", features = ["test-util"] }
