[package]
name = "elfo-dumper"
version = "0.2.0-alpha.20"
description = "Dumps messages of the elfo system on disk"
keywords = ["elfo", "actor", "distributed", "tokio", "dumping"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core", features = ["unstable"] }
elfo-utils = { version = "0.2.7", path = "../elfo-utils" }

metrics.workspace = true
bytesize.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
serde.workspace = true
libc.workspace = true
thread_local.workspace = true
parking_lot.workspace = true
tracing.workspace = true
fxhash = "0.2.1"
humantime-serde = "1"
serde_json = "1.0.64"

[dev-dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core", features = ["test-util"] }
elfo-test = { path = "../elfo-test" }

toml.workspace = true
tempdir = "0.3.7"
