[package]
name = "elfo-logger"
version = "0.2.0-alpha.9"
description = "Logs events of the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio", "logging"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[features]
tracing-log = [ "dep:tracing-log", "log" ]

[dependencies]
elfo-core = { version = "0.2.0-alpha.9", path = "../elfo-core", features = ["unstable"] }
elfo-utils = { version = "0.2.3", path = "../elfo-utils" }

arc-swap = "1.2.0"
once_cell = { version = "1.8.0", features = ["parking_lot"] }
derive_more = "0.99.11"
futures-intrusive = "0.5"
tokio = { version = "1.5", features = ["macros", "fs", "io-util"] }
atty = "0.2.14"
serde = { version = "1.0.120", features = ["derive"] }
parking_lot = "0.12"
sharded-slab = "0.1.7"
tracing = "0.1.25"
tracing-subscriber = { version = "0.3.2", features = ["env-filter", "parking_lot"] }
tracing-log = { version = "0.1.3", optional = true }
log = { version = "0.4.20", optional = true }
metrics = "0.17"
dashmap = "5"
fxhash = "0.2.1"
humantime = "2.1.0"

[dev-dependencies]
elfo-core = { version = "0.2.0-alpha.9", path = "../elfo-core", features = ["test-util"] }
