[package]
name = "elfo-logger"
version = "0.2.0-alpha.20"
description = "Logs events of the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio", "logging"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
tracing-log = [ "dep:tracing-log", "log" ]

[dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core", features = ["unstable"] }
elfo-utils = { version = "0.2.7", path = "../elfo-utils" }

metrics.workspace = true
dashmap.workspace = true
derive_more.workspace = true
tokio = { workspace = true, features = ["macros", "fs", "io-util"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "parking_lot"] }
bytesize.workspace = true
parking_lot.workspace = true
serde.workspace = true
tracing.workspace = true
arc-swap = "1.2.0"
futures-intrusive = "0.5"
sharded-slab = "0.1.7"
tracing-log = { version = "0.2", optional = true }
log = { version = "0.4.20", optional = true }
fxhash = "0.2.1"
humantime = "2.1.0"

[dev-dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core", features = ["test-util"] }
elfo-test = { path = "../elfo-test" }

toml.workspace = true
tempdir = "0.3.7"
