[package]
name = "elfo-macros-impl"
version = "0.1.1"
description = "Macros for matching and deriving messages, implementation internals"

authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
