[package]
name = "elfo-macros-impl"
version = "0.2.0-alpha.12"
description = "Macros for matching and deriving messages, implementation internals"
keywords = ["elfo", "actor", "distributed", "tokio", "macros"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[features]
network = []

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "2", features = ["full", "extra-traits"] }
