[package]
name = "elfo-macros"
version = "0.1.14"
description = "Macros for matching and deriving messages"

authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.60", features = ["parsing", "printing"] }
elfo-macros-impl = { version = "0.1.0", path = "../elfo-macros-impl" }
