[package]
name = "elfo-macros"
version = "0.1.15"
description = "Macros for matching and deriving messages"

authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
elfo-macros-impl = { version = "0.1.1", path = "../elfo-macros-impl" }

proc-macro2 = "1.0.24"
syn = { version = "2", features = ["parsing", "printing"] }
