[package]
name = "elfo-macros"
version = "0.2.0-alpha.17"
description = "Macros for matching and deriving messages"
keywords = ["elfo", "actor", "distributed", "tokio", "macros"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
elfo-macros-impl = { version = "=0.2.0-alpha.17", path = "../elfo-macros-impl" }

syn = { version = "2", features = ["parsing", "printing"] }
