[package]
name = "elfo-network"
version = "0.2.0-alpha.11"
description = "Distributed actors for elfo"
keywords = ["elfo", "actor", "distributed", "tokio", "network"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
elfo-core = { version = "0.2.0-alpha.11", path = "../elfo-core", features = ["unstable", "network"] }
elfo-utils = { version = "0.2.2", path = "../elfo-utils" }

serde = { version = "1.0.120", features = ["derive"] }
static_assertions = "1.1.0"
eyre = "0.6.8"
fxhash = "0.2.1"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["net", "io-util"] }
tokio-util = "0.7"
tracing = "0.1.25"
parking_lot = "0.12"
derive_more = "0.99.11"
humantime-serde = "1"
kanal = "0.1.0-pre8"
dashmap = "5"
futures-intrusive = "0.5"
metrics = "0.17"
bitflags = "2.3.2"
lz4_flex = "0.11.1"
byteorder = "1.4.3"

[dev-dependencies]
tracing-test = "0.2.4" # TODO: actually unused?
