[package]
name = "elfo-network"
version = "0.2.0-alpha.16"
description = "Distributed actors for elfo"
keywords = ["elfo", "actor", "distributed", "tokio", "network"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
turmoil06 = ["dep:turmoil06"]

[dependencies]
elfo-core = { version = "0.2.0-alpha.16", path = "../elfo-core", features = ["unstable", "network"] }
elfo-utils = { version = "0.2.6", path = "../elfo-utils" }

metrics.workspace = true
dashmap.workspace = true
derive_more.workspace = true
serde = { version = "1.0.120", features = ["derive"] }
static_assertions = "1.1.0"
eyre = "0.6.8"
fxhash = "0.2.1"
futures = "0.3.21"
tokio = { workspace = true, features = ["net", "io-util"] }
tracing = "0.1.25"
parking_lot = "0.12"
humantime-serde = "1"
kanal = "0.1.0-pre8"
bitflags = "2.3.2"
lz4_flex = { version = "0.11.1", default-features = false, features = ["std"] }
byteorder = "1.4.3"
turmoil06 = { package = "turmoil", version = "0.6", optional = true }

[dev-dependencies]
tracing-test = "0.2.4" # TODO: actually unused?
