[package]
name = "elfo-network"
version = "0.2.0-alpha.20"
description = "Distributed actors for elfo"
keywords = ["elfo", "actor", "distributed", "tokio", "network"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
turmoil06 = ["dep:turmoil06"]

[dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core", features = ["unstable", "network"] }
elfo-utils = { version = "0.2.7", path = "../elfo-utils" }

metrics.workspace = true
dashmap.workspace = true
derive_more.workspace = true
eyre.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
futures.workspace = true
libc.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
pin-project.workspace = true
tracing.workspace = true
static_assertions = "1.1.0"
fxhash = "0.2.1"
humantime-serde = "1"
kanal = "0.1.1"
bitflags = "2.3.2"
lz4_flex = { version = "0.11.1", default-features = false, features = ["std"] }
byteorder = "1.4.3"
turmoil06 = { package = "turmoil", version = "0.6", optional = true }

[dev-dependencies]
tracing-test = "0.2.4" # TODO: actually unused?
proptest.workspace = true
