[package]
name = "elfo-pinger"
version = "0.2.0-alpha.20"
description = "Pings groups of the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio", "pinging"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core", features = ["unstable"] }
elfo-utils = { version = "0.2.7", path = "../elfo-utils" }

tokio = { workspace = true, features = ["time"] }
serde = { version = "1.0.120", features = ["derive"] }
humantime-serde = "1"
tracing = "0.1.25"
