[package]
name = "elfo-telemeter"
version = "0.2.0-alpha.19"
description = "Collects and exposes metrics of the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bench]]
name = "telemetry"
harness = false

[features]
unstable = []

[dependencies]
elfo-core = { version = "0.2.0-alpha.19", path = "../elfo-core", features = ["unstable"] } # TODO: do not need

stability.workspace = true
metrics.workspace = true
tokio.workspace = true
hyper = { version = "1.0.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1.0.120", features = ["derive"] }
sketches-ddsketch = "0.3.0"
seqlock = "0.2"
thread_local = "1.1.8"
tracing = "0.1.25"
parking_lot = "0.12"
fxhash = "0.2.1"
humantime-serde = "1"
cow-utils = "0.1.2"
flate2 = "1"

[dev-dependencies]
elfo-configurer = { path = "../elfo-configurer" }

tokio = { workspace = true, features = ["rt-multi-thread"] }
toml.workspace = true
criterion.workspace = true
proptest.workspace = true
