[package]
name = "elfo-telemeter"
version = "0.2.0-alpha.20"
description = "Collects and exposes metrics of the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bench]]
name = "telemetry"
harness = false

[features]
unstable = []

[dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core", features = ["unstable"] }

stability.workspace = true
metrics.workspace = true
tokio = { workspace = true, features = ["net"] }
thread_local.workspace = true
parking_lot.workspace = true
serde.workspace = true
tracing.workspace = true
hyper = { version = "1.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1"
sketches-ddsketch = "0.3"
seqlock = "0.2"
fxhash = "0.2.1"
humantime-serde = "1"
cow-utils = "0.1.2"
flate2 = "1"

[dev-dependencies]
elfo-test = { path = "../elfo-test" }
elfo-configurer = { path = "../elfo-configurer" }

tokio = { workspace = true, features = ["rt-multi-thread"] }
toml.workspace = true
criterion.workspace = true
proptest.workspace = true
eyre.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["gzip"] }
