[package]
name = "elfo-test"
version = "0.2.0-alpha.15"
description = "Test utils for the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio", "testing"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
unstable = []

[dependencies]
elfo-core = { version = "0.2.0-alpha.15", path = "../elfo-core", features = ["test-util"] }
elfo-configurer = { version = "0.2.0-alpha.15", path = "../elfo-configurer" }

stability.workspace = true
tokio = "1"
serde = { version = "1.0.120", features = ["derive", "rc"] }
serde-value = "0.7.0"
futures-intrusive = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = { version = "1.8.0" }
