[package]
name = "elfo-test"
version = "0.2.0-alpha.20"
description = "Test utils for the elfo system"
keywords = ["elfo", "actor", "distributed", "tokio", "testing"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
unstable = []

[dependencies]
elfo-core = { version = "0.2.0-alpha.20", path = "../elfo-core" }
elfo-configurer = { version = "0.2.0-alpha.20", path = "../elfo-configurer" }

tokio.workspace = true
instability.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde.workspace = true
serde-value = "0.7.0"
futures-intrusive = "0.5"
