[package]
name = "elfo-utils"
version = "0.2.3"
description = "Some utils for the elfo system"
keywords = ["elfo", "actor", "distributed"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[[bench]]
name = "rate_limiter"
harness = false

[features]
test-util = []

[dependencies]
derive_more = "0.99.11"
quanta = "0.12"

[dev-dependencies]
criterion = "0.4"
