[package]
name = "elfo-utils"
version = "0.2.5"
description = "Some utils for the elfo system"
keywords = ["elfo", "actor", "distributed"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[[bench]]
name = "rate_limiter"
harness = false

[features]
test-util = []

[dependencies]
quanta = "0.12"
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = "0.5.1"
