[package]
name = "elfo"
version = "0.2.0-alpha.16"
description = "An asynchronous distributed actor framework with robust observability"
keywords = ["elfo", "actor", "distributed", "tokio", "observability"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
full = ["elfo-configurer", "elfo-logger", "elfo-dumper", "elfo-telemeter", "elfo-pinger"]
test-util = ["elfo-test", "elfo-core/test-util"]
network = ["elfo-network"]
unstable = ["elfo-core/unstable", "elfo-telemeter/unstable", "elfo-test/unstable" ]
unstable-stuck-detection = ["elfo-core/unstable-stuck-detection"]
tracing-log = ["elfo-logger/tracing-log"]
turmoil06 = ["elfo-network/turmoil06"]

[dependencies]
elfo-core = { version = "0.2.0-alpha.16", path = "../elfo-core" }
elfo-macros = { version = "0.2.0-alpha.16", path = "../elfo-macros" }
elfo-test = { version = "0.2.0-alpha.16", path = "../elfo-test", optional = true }
elfo-configurer = { version = "0.2.0-alpha.16", path = "../elfo-configurer", optional = true }
elfo-logger = { version = "0.2.0-alpha.16", path = "../elfo-logger", optional = true }
elfo-telemeter = { version = "0.2.0-alpha.16", path = "../elfo-telemeter", optional = true }
elfo-dumper = { version = "0.2.0-alpha.16", path = "../elfo-dumper", optional = true }
elfo-pinger = { version = "0.2.0-alpha.16", path = "../elfo-pinger", optional = true }
elfo-network = { version = "0.2.0-alpha.16", path = "../elfo-network", optional = true }

[dev-dependencies]
elfo-test = { version = "0.2.0-alpha.16", path = "../elfo-test" }

metrics.workspace = true
toml.workspace = true
derive_more.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow = "1.0.38"
futures = "0.3.12"
tracing = "0.1.25"
tracing-subscriber = "0.3"
serde = { version = "1.0.120", features = ["derive"] }
static_assertions = "1.1.0"
parking_lot = "0.12"
libc = "0.2.97"
futures-intrusive = "0.5"
turmoil = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
